--- a/a3 qh.tex
+++ b/a3 qh.tex
@@ -212,7 +212,7 @@ Suppose \(dp[1..n]\) is an array that we use to store the end elements of LDS, w
 \end{algorithm}
 
 
-\paragraph{(c).} Time complexity is \(O(n\log n)\). We first perform mergesort on the input list which takes \(O(n\log n)\) time. Then line \(10\text{-}23\) builds the subsequences by iterating through the sorted input list. For each iteration, we either append the element to the current LDS, or perform a binary search to find the position in \(dp\) array to update the end element. Binary search takes \(O(n)\) since subsequences will at most be length \(n\), and in fact it is never \(n\) if we need to update the end element of established subsequences. We can perform binary search at most \(n\) times, so the cost for building LDS is \(O(n\log n)\). In fact if we need to update end element \(n\) times, we can never build longer subsequences than length \(1\). So the cost will definitely be in \(O(n\log n)\).
+\paragraph{(c).} Time complexity is \(O(n\log n)\). Initialization of arrays takes \(O(n)\) time. Performing mergesort on the input list takes \(O(n\log n)\) time. Then line \(10\text{-}23\) builds the subsequences by iterating through the sorted input list. For each iteration, we either append the element to the current LDS, or perform a binary search to find the position in the \(dp\) array to update the end element. Binary search takes \(O(\log n)\) since subsequences will at most be length \(n\), and in fact it is always smaller than \(n\) if we update the end element of established subsequences. We can perform binary search at most \(n\) times, so the cost for building LDS is \(O(n\log n)\). In fact if we update end element \(n\) times, we can never build longer subsequences than length \(1\). So the cost will definitely be \(O(n\log n)\). Then to restore the LDS from backwards, we iterate at most \(n\) times because its length is at most \(n\). The overall time complexity would be \(O(n)\) + \(O(n\log n)\) + \(O(n\log n)\) + \(O(n)\) = \(O(n\log n)\).
 
 \subsection*{Q6.}
 \paragraph{(a).} Given that \(k_i\) is the number of proposals for the \(i^{th}\) approach, and \(m_{ij}\) is the funding requested for the \(j^{th}\) proposal for the \(i^{th}\) approach, where \(j \in [1, k_i]\). The following algorithm relies heavily on the assumption that all \(m_{ij}\) are integer numbers, and assuming this is allowed in the problem specification. We would use a \(dp\) table to compute the choices of proposals. In the following psuedocode, entry \(dp[i][j]\) is a pair of values \(\langle x,y\rangle\) where \(x\) is a funding sum (potentially many possibilities) requested by the previous (\(i-1\)) approaches, given that \(j\) is the exact funding requested by all \(i\) approaches; and the second value \(y\) is the corresponding index of the proposal for the \(i^{th}\) approach such that \(x\) + \(m_{iy}\) = \(j\). If there is no set of proposals for the first \(i\) approaches that sum to \(j\) exactly, \(dp[i][j]\) would be \(\langle 0,0\rangle\). The reason for keeping the fund sum of the previous \((i-1)\) proposals is to trace the selected proposals backwards at the end.
